Updated intro text

--- a/index.html
+++ b/index.html
@@ -1,74 +1,62 @@
 <html>
-	<head>	
-		<title>Rainer Simon</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
-	
-		<style>
-		#menu .fixed a {
-			background: url(home.png);
-			background-position: 0px 0px;
-			width: 59px;
-		}
+  <head>	
+    <title>Rainer Simon</title>
+    <link rel="stylesheet" type="text/css" href="style.css">	
+    <style>
+      #menu .fixed a {
+        background: url(home.png);
+        background-position: 0px 0px;
+        width: 59px;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="menu">
+      <ul>
+        <li class="fixed"><a href="index.html">Home</a></li>	
+        <li class="cv"><a href="cv.html">CV</a></li>
+        <li class="publications"><a href="publications.html">Publications</a></li>
+      </ul>
+    </div>
 
-		iframe {
-			border:1px solid #000000;
-			float: right;
-			margin-top: 10px;
-			margin-right: 10px;
-		}
-		</style>
-	</head>
+    <div id="content">
+      <img src="rainer.jpg" class="photo">
+      <h1>Dr. Rainer Simon</h1>
+      <p class="contactInfo">
+        E-Mail: <a href="mailto:rainer@no5.at">rainer@no5.at</a><br/>
+        Twitter: <a href="http://twitter.com/aboutgeo">@aboutgeo</a>
+      </p>
+      <p>
+        <a href="http://www.mendeley.com/profiles/rainer-simon/"><img border="0" src="http://www.mendeley.com/embed/icon/1/red/small" alt="Research papers by Rainer Simon"/></a>			
+      </p>
 
-	<body>
-		<div id="menu">
-			<ul>
-				<li class="fixed"><a href="index.html">Home</a></li>	
-				<li class="cv"><a href="cv.html">CV</a></li>
-				<li class="publications"><a href="publications.html">Publications</a></li>
-			</ul>
-		</div>
+      <p class="intro">
+        I'm a scientist at the 
+        <a href="http://www.ait.ac.at/research-services/research-services-safety-security/digital-memory-engineering/">Digital
+        Memory Engineering</a> research group of the <a href="http://www.ait.ac.at">Austrian Institute of Technology</a>. My
+        work revolves around the use of semantic technologies and <a href="http://en.wikipedia.org/wiki/Linked_data">Linked
+        Data</a> in the <i>digital library</i> and <i>digital humanities</i> fields. I always had a passion for maps,
+        and in many of my projects I have been dealing with geospatial or cartographic data.
+      </p>
+      <p>
+        I'm also an avid software developer. I have more than 10 years of experience with Java, and (over time) had decent
+        exposure to a range of other languages, including C++, C#, Python, Ruby and Groovy. Recently, though, I love to write
+        my code in Scala. And I'm also happy to work with JavaScript - if the situation absolutely calls for it.
+      </p>
+      <p>
+        Prior to my current position, I worked as a researcher and project manager at the
+        <a href="http://www.ftw.at/">Telecommunications Research Center Vienna</a> in the area of mobile multimedia
+        services and the <i>mobile Web</i>, with a particular focus on geographical applications for mobile devices, 
+        and as a systems architect for a <a href="http://www.mobilkom.at/">major Austrian mobile network operator</a>.
+        My PhD thesis entitled <a href="http://pub-inf.tuwien.ac.at/showentry.php?ID=172595">&quot;Mobilizing the 
+        Geospatial Web: A Framework and Conceptual Model for Spatially Aware Mobile Web Applications&quot;</a>
+        investigates how the boost of innovation that recent Web mapping and  mashup technologies have brought to
+        the World Wide Web can be transferred to the mobile domain. It is available for download
+        <a href="http://www.ub.tuwien.ac.at/diss/AC05037086.pdf">here</a>.
+      </p>
 
-		<div id="content">
-			<img src="rainer.jpg" class="photo">
-
-			<iframe src="http://geekvault.no5.at/blogloc/gmap.jsp?user=rainer" width="300" frameborder="0" height="200">
-			</iframe>	
-
-			<h1>Dr. Rainer Simon</h1>
-
-			<p class="contactInfo">
-			<a href="mailto:simon@ftw.at">simon@ftw.at</a>
-			</p>
-
-			<p>
-			<a href="http://www.xing.com/profile/Rainer_Simon2" target="_blank"><img src="http://www.xing.com/img/buttons/9_de_btn.gif" width="80" height="15" alt="XING" border="0" /></a>
-			&nbsp; <a href="foaf-rainer.rdf"><img border="0" style="position:relative; top:2px;" src="foaflets-12pt.jpg" /></a>
-			</p>
-
-			<p class="intro">I'm a senior researcher at the <a href="http://www.smart-systems.at/products/products_dme_de.html">Digital Memory Engineering</a>
-			research group of the <a href="http://arcs.ac.at">Austrian Research Centers</a>. My current research
-			focuses on <i>digital preservation</i> - the tools, methods and technologies necessary to ensure reliable
-			long term access to digital documents and multimedia content, as well as geospatial and cartographic data.</p>
-
-			
-			<p>Prior to this position, I worked as a researcher and project manager at the
-			<a href="http://www.ftw.at/">Telecommunications Research Center Vienna</a> in the domain
-			of mobile multimedia services and the <i>mobile Web</i>, with a particular focus on 
-			geographical applications for mobile devices, and as a systems architect for a <a href="http://www.mobilkom.at/">major Austrian mobile 
-			network operator</a>.</p>
-
-			<p>My PhD thesis entitled <a href="http://pub-inf.tuwien.ac.at/showentry.php?ID=172595">&quot;Mobilizing the Geospatial Web: A
-			Framework and Conceptual Model for Spatially Aware Mobile Web Applications&quot;</a>
-			investigates how the boost of innovation that recent Web mapping and 
-			mashup technologies have brought to the World Wide Web can be transferred to 
-			the mobile domain. It is available for download <a href="http://www.ub.tuwien.ac.at/diss/AC05037086.pdf">here</a>.
-			</p>
-
-			<p/>
-
-			<h1>ACTIVITIES</h1>
-
-			<ul>
+      <h1>ACTIVITIES</h1>
+      <ul>
 				<li>Programme Commitee member of the <a href="http://ifgi.uni-muenster.de/locweb2009/">LocWeb 2009 - Second International
 				Workshop on Location and the Web</a> held in conjunction with <a href="http://www.chi2009.org/">CHI 2009</a>, Boston, USA, 
 				April 4-9, 2009.</li>
@@ -112,14 +100,15 @@
 			<h1>SELECTED RESEARCH PROJECTS (ONGOING)</h1>
 
 			<ul>
-				<li><a href="http://www.planets-project.eu/">Planets</a></li>
-				<li><a href="http://www.europeanaconnect.eu/">EuropeanaConnect</a></li>
-				<!-- li><em><a href="http://www.rs-dme.at/">Research Studio Digital Memory Engineering</em></li -->
+                          <li>PELAGIOS</li>
 			</ul>
 
 			<h1>SELECTED RESEARCH PROJECTS (COMPLETED)</h1>
 			
 			<ul>
+	<li><a href="http://www.planets-project.eu/">Planets</a></li>
+				<li><a href="http://www.europeanaconnect.eu/">EuropeanaConnect</a></li>
+			
 				<li><a href="http://www.ftw.at/ftw/research/projects/ProjekteFolder/U-1">WikiVienna</a> 2007-2009 (<a href="files/Standard_WikiVienna.pdf">newspaper
 				article</a>, <a href="files/impuls_ftw.mp3">radio interview</a>)
 				</li>
@@ -139,17 +128,5 @@
 				</li>
 			</ul>
 		</div>
-
-<!-- Start of StatCounter Code -->
-<script type="text/javascript">
-sc_project=2291152; 
-sc_invisible=1; 
-sc_partition=21; 
-sc_security="299f3c1a"; 
-</script>
-
-<script type="text/javascript" src="http://www.statcounter.com/counter/counter_xhtml.js"></script><noscript><div class="statcounter"><a href="http://www.statcounter.com/" target="_blank"><img class="statcounter" src="http://c22.statcounter.com/2291152/0/299f3c1a/1/" alt="counter customizable free hit" ></a></div></noscript>
-<!-- End of StatCounter Code -->
-			
 	</body>
 </html>
