--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <p class="contactInfo">
         E-Mail: <a href="mailto:rainer@no5.at">rainer@no5.at</a><br/>
         Twitter: <a href="http://twitter.com/aboutgeo">@aboutgeo</a>
+        Github: <a href="http://github.com/rsimon">rsimon</a>
       </p>
       <p>
         <a href="http://www.mendeley.com/profiles/rainer-simon/"><img border="0" src="http://www.mendeley.com/embed/icon/1/red/small" alt="Research papers by Rainer Simon"/></a>			
@@ -39,7 +40,8 @@
         and in many of my projects I have been dealing with geospatial or cartographic data.
         I'm also an avid software developer. I have more than 10 years of experience with Java, and (over time) had decent
         exposure to a range of other languages, including C++, C#, Python, Ruby and Groovy. Recently, though, I love to write
-        my code in Scala. And I'm also happy to work with JavaScript - if the situation absolutely calls for it.
+        my code in Scala. And I'm also happy to work with JavaScript - <a href="http://en.wikipedia.org/wiki/If_and_only_if">iff</a> 
+        the situation absolutely calls for it.
       </p>
       <p>
         Prior to my current position, I worked as a researcher and project manager at the
