--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         and in many of my projects I have been dealing with geospatial or cartographic data.
         I'm also an avid software developer. I have more than 10 years of experience with Java, and (over time) had decent
         exposure to a range of other languages, including C++, C#, Python, Ruby and Groovy. Recently, though, I love to write
-        my code in Scala. And I'm also happy to work with JavaScript - <a href="http://en.wikipedia.org/wiki/If_and_only_if">iff</a> 
-        the situation absolutely calls for it.
+        my code in Scala. And I'm also happy to work with JavaScript - 
+        <a href="http://en.wikipedia.org/wiki/If_and_only_if" title="if and only if">iff</a> the situation calls for it.
       </p>
       <p>
         Prior to my current position, I worked as a researcher and project manager at the
