--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1>Dr. Rainer Simon</h1>
       <p class="contactInfo">
         E-Mail: <a href="mailto:rainer@no5.at">rainer@no5.at</a><br/>
-        Twitter: <a href="http://twitter.com/aboutgeo">@aboutgeo</a>
+        Twitter: <a href="http://twitter.com/aboutgeo">@aboutgeo</a><br/>
         Github: <a href="http://github.com/rsimon">rsimon</a>
       </p>
       <p>
