--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 				</li>
 
 				<li>Reviewer for the <a href="http://www.tandf.co.uk/journals/tf/13658816.html">International Journal of
-				Geographical Information Science</a> and the <a href="http://www.wiley.com/bw/journal.asp?ref=1361-1682">Transactions in GIS</a>.
+				Geographical Information Science</a>, <a href="http://www.wiley.com/bw/journal.asp?ref=1361-1682">Transactions in GIS</a> and
+				the <a href="http://www.semantic-web-journal.net/">Semantic Web – Interoperability, Usability, Applicability</a> journal.
 				</li>
 
 			</ul>
