--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 				<li>Reviewer for the <a href="http://www.tandf.co.uk/journals/tf/13658816.html">International Journal of
 				Geographical Information Science</a>, <a href="http://www.wiley.com/bw/journal.asp?ref=1361-1682">Transactions in GIS</a> and
-				the <a href="http://www.semantic-web-journal.net/">Semantic Web – Interoperability, Usability, Applicability</a> journal.
+				the <a href="http://www.semantic-web-journal.net/">Semantic Web - Interoperability, Usability, Applicability</a> journal.
 				</li>
 
 			</ul>
