--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
         Prior to my current position, I worked as a researcher and project manager at the
         <a href="http://www.ftw.at/">Telecommunications Research Center Vienna</a> in the area of mobile multimedia
         services and the <i>mobile Web</i>, with a particular focus on geographical applications for mobile devices, 
-        and as a systems architect for a <a href="http://www.mobilkom.at/">major Austrian mobile network operator</a>.
+        and as a systems architect for a <a href="http://www.a1.net/">major Austrian mobile network operator</a>.
         My PhD thesis entitled <a href="http://pub-inf.tuwien.ac.at/showentry.php?ID=172595">&quot;Mobilizing the 
         Geospatial Web: A Framework and Conceptual Model for Spatially Aware Mobile Web Applications&quot;</a>
-        investigates how the boost of innovation that recent Web mapping and  mashup technologies have brought to
+        investigated how the boost of innovation that recent Web mapping and  mashup technologies have brought to
         the World Wide Web can be transferred to the mobile domain. It is available for download
-        <a href="http://www.ub.tuwien.ac.at/diss/AC05037086.pdf">here</a>.
+        <a href="http://www.ub.tuwien.ac.at/diss/AC05037086.pdf">at the Vienna University of Technology library</a>.
       </p>
 
       <h1>ACTIVITIES</h1>
