--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         Geospatial Web: A Framework and Conceptual Model for Spatially Aware Mobile Web Applications&quot;</a>
         investigated how the boost of innovation that recent Web mapping and  mashup technologies have brought to
         the World Wide Web can be transferred to the mobile domain. It is available for download
-        <a href="http://www.ub.tuwien.ac.at/diss/AC05037086.pdf">at the Vienna University of Technology library</a>.
+        <a href="http://www.ub.tuwien.ac.at/diss/AC05037086.pdf">from the library of the Vienna University of Technology</a>.
       </p>
 
       <h1>ACTIVITIES</h1>
