--- a/publications.html
+++ b/publications.html
@@ -192,31 +192,16 @@
 				</li>
 			</ul>	
 
-			<h1>THESES</h1>
+			<h1>THESIS</h1>
 			<ul>
 				<li>Rainer Simon (2008) <i>Mobilizing the Geospatial Web: A Framework and Conceptual Model for Spatially Aware Mobile Web Applications</i>, 
 				Doctoral Thesis, <a href="http://www.tuwien.ac.at/">
 				Vienna University of Technology</a>, Vienna, Austria. (<a name="thesis" href="files/abstract.txt">Abstract</a>) (<a href="http://www.ub.tuwien.ac.at/diss/AC05037086.pdf">PDF</a>)
 				</li>
-	
-				<li>Rainer Simon (2002) <i>Performance Analysis of Power Level Based Mobile Positioning - A Mobile Java
-				Measurement Application</i>, Diploma Thesis, <a href="http://www.tuwien.ac.at/">
-				Vienna University of Technology</a>, Vienna, Austria.
-				</li>
+
 			</ul>
 
 		</div>			
-
-<!-- Start of StatCounter Code -->
-<script type="text/javascript">
-sc_project=2291152; 
-sc_invisible=1; 
-sc_partition=21; 
-sc_security="299f3c1a"; 
-</script>
-
-<script type="text/javascript" src="http://www.statcounter.com/counter/counter_xhtml.js"></script><noscript><div class="statcounter"><a href="http://www.statcounter.com/" target="_blank"><img class="statcounter" src="http://c22.statcounter.com/2291152/0/299f3c1a/1/" alt="counter customizable free hit" ></a></div></noscript>
-<!-- End of StatCounter Code -->
 
 	</body>
 </html>
