--- a/publications.html
+++ b/publications.html
@@ -1,46 +1,47 @@
 <html>
-	<head>	
-		<title>Rainer Simon</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+  <head>	
+    <title>Rainer Simon</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+      #menu .fixed a {
+        background: url(publications.png);
+        background-position: 0px 0px;
+        width: 109px;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="menu">
+      <ul>
+        <li class="home"><a href="index.html">Home</a></li>	
+        <li class="cv"><a href="cv.html">CV</a></li>
+        <li class="fixed"><a href="publications.html">Publications</a></li>
+      </ul>
+    </div>
+    <div id="content">
+      <h1>JOURNAL</h1>
+      <ul>
+        <li>Bernhard Haslhofer, Robert Sanderson, Rainer Simon, and Herbert Van de Sompel. 2012. Open Annotations on 
+          Multimedia Web Resources. In <i>Multimedia Tools and Applications</i> (in press)</li>
 
-		<style>
-		#menu .fixed a {
-			background: url(publications.png);
-			background-position: 0px 0px;
-			width: 109px;
-		}
-		</style>
-	</head>
+        <li>Rainer Simon, Bernhard Haslhofer, Joachim Jung. 2011. Annotations, Tags and Linked Data. Metadata Enrichment in 
+          Online Map Collections Through Volunteer-Contributed Information. In <i>e-Perimetron</i>. Vol. 6, No.3 (2011), 
+          pp. 129-137.</li>   
 
-	<body>
-		<div id="menu">
-			<ul>
-				<li class="home"><a href="index.html">Home</a></li>	
-				<li class="cv"><a href="cv.html">CV</a></li>
-				<li class="fixed"><a href="publications.html">Publications</a></li>
-			</ul>
-		</div>
+        <li>Rainer Simon, Joachim Korb, Christian Sadilek, Matthias Baldauf. 2010. Explorative User Interfaces for
+          Browsing Historical Maps on the Web. In <i>e-Perimetron</i>. Vol. 5, No.3 (2010), 
+          pp. 132-143.</li>   
 
-		<div id="content">
+        <li>Rainer Simon, Peter Fr&ouml;hlich, Thomas Grechenig. 2008. GeoPointing: Evaluating the Performance of Orientation-Aware
+          Location-Based Interaction Under Real-World Conditions. In <i>Journal of Location Based Services</i>. 2, 1 (March 2008),
+          pp. 24-40.</li>
 
-			<h1>JOURNAL PAPERS</h1>
+        <li>Rainer Simon, Peter Fr&ouml;hlich, Hermann Anegg. 2007. Enabling Spatially Aware Mobile Applications. In
+          <i>Transactions in GIS</i>. Vol. 11, Issue 5 (October 2007), pp. 738-794.</li>
+      </ul>
 
-			<ul>
-				<li>
-				R. Simon, P. Fr&ouml;hlich, and T. Grechenig (2008) GeoPointing: Evaluating the Performance of Orientation-Aware
-				Location-Based Interaction Under Real-World Conditions, <i>Journal of Location Based Services</i>, 2 (1), pp. 24-40. 
-				</li>
-
-				<li>
-				R. Simon, P. Fr&ouml;hlich, and H. Anegg (2007) Enabling Spatially Aware Mobile Applications,
-				<i><a href="http://www.blackwellpublishing.com/journal.asp?ref=1361-1682">Transactions in GIS</a></i>,
-				vol. 11, issue 5, pp. 738-794, Blackwell Publishing.
-				</li>
-			</ul>
-
-			<h1>CONFERENCE &amp; WORKSHOP PUBLICATIONS</h1>
-
-			<ul>
+      <h1>CONFERENCE OR WORKSHOP</h1>
+      <ul>
 
 				<li>
 				P. Fr&ouml;hlich, G. Obernberger, R. Simon, and P. Reichl (2008) Exploring the Design Space of Smart Horizons,
