--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@
       <h1>CONFERENCE OR WORKSHOP</h1>
       <ul>
         <li>Peter Fr&ouml;hlich, Gerhard Obernberger, Rainer Simon, Peter Reichl. 2008. Exploring the Design Space of Smart Horizons.
-          In <i>Proceedings of the 10th International Conference on Human-Computer Interaction with Mobile Devices and Services</li>
+          In <i>Proceedings of the 10th International Conference on Human-Computer Interaction with Mobile Devices and Services
           (Mobile HCI 2008)</a></i>. ACM, New York, NY, USA, pp. 363-366.</li>
 
 	<li>Rainer Simon, Peter Fr&ouml;hlich, Gerhard Obernberger, Erwin Wittowetz. 2007. The Point to Discover GeoWand
