--- a/publications.html
+++ b/publications.html
@@ -46,23 +46,12 @@
           In <i>Proceedings of the 10th International Conference on Human-Computer Interaction with Mobile Devices and Services
           (Mobile HCI 2008)</a></i>. ACM, New York, NY, USA, pp. 363-366.</li>
 
-	<li>Rainer Simon, Peter Fr&ouml;hlich, Gerhard Obernberger, Erwin Wittowetz. 2007. The Point to Discover GeoWand
-				demo track of the <i><a href="http://www.ubicomp2007.org/">9th International Conference on 
-				Ubiquitous Computing (UbiComp 07)</a></i>, Innsbruck, Austria. (<a href="http://p2d.ftw.at/papers/Simon_Geowand.pdf">PDF</a>)
-				</li>
+        <li>Peter Fr&ouml;hlich, Rainer Simon, Elisabeth Muss, Andrea Stepan, Peter Reichl. 2007. Envisioning Future Mobile Spatial
+          Applications. In <i>Proceedings of the 21st British HCI Group Annual Conference on People and Computers</i> (BCS-HCI
+          2007), pp. 35.38.</li>
 
-				<li>
-				P. Fr&ouml;hlich, R. Simon, E. Muss, A. Stepan, and Peter Reichl (2007)
-				Envisioning Future Mobile Spatial Applications,
-				<i><a href="http://www.bcs-hci.org.uk/hci2007/">HCI 2007 Conference</a></i>, Lancaster, UK. (<a href="http://p2d.ftw.at/papers/paper233.pdf">PDF</a>)
-				</li>
-
-				<li>
-				R. Simon and P. Fr&ouml;hlich (2007) A Mobile 
-				Application Framework for the Geospatial Web, <i>Proceedings of
-				the <a href="http://www2007.org/">16th International World Wide Web Conference
-				(WWW 2007)</a></i>, Banff, Alberta, Canada, pp. 381-390, ACM Press. (<a href="http://p2d.ftw.at/papers/simon_www2007.pdf">PDF</a>)
-				</li>
+        <li>Rainer Simon, Peter Fr&ouml;hlich. 2007. A Mobile Application Framework for the Geospatial Web. In <i>Proceedings
+          of the 16th International World Wide Web Conference</i> (WWW 2007). ACM, New York, NY, USA, pp. 381-390.</li>
 
 				<li>
 				P. Fr&ouml;hlich, R. Simon, L. Baillie, J. Roberts, and R. Murray-Smith (2007)
