--- a/publications.html
+++ b/publications.html
@@ -22,36 +22,40 @@
       <h1>JOURNAL</h1>
       <ul>
         <li>Bernhard Haslhofer, Robert Sanderson, Rainer Simon, and Herbert Van de Sompel. 2012. Open Annotations on 
-          Multimedia Web Resources. In <i>Multimedia Tools and Applications</i> (in press).</li>
+          Multimedia Web Resources.<br/>
+          In <i>Multimedia Tools and Applications</i> (in press).</li>
 
         <li>Rainer Simon, Bernhard Haslhofer, Joachim Jung. 2011. Annotations, Tags and Linked Data. Metadata Enrichment in 
-          Online Map Collections Through Volunteer-Contributed Information. In <i>e-Perimetron</i>. Vol. 6, No.3 (2011), 
-          pp. 129-137.</li>   
+          Online Map Collections Through Volunteer-Contributed Information.<br/>
+          In <i>e-Perimetron</i>. Vol. 6, No.3 (2011), pp. 129-137.</li>   
 
         <li>Rainer Simon, Joachim Korb, Christian Sadilek, Matthias Baldauf. 2010. Explorative User Interfaces for
-          Browsing Historical Maps on the Web. In <i>e-Perimetron</i>. Vol. 5, No.3 (2010), 
-          pp. 132-143.</li>   
+          Browsing Historical Maps on the Web.<br/>
+          In <i>e-Perimetron</i>. Vol. 5, No.3 (2010), pp. 132-143.</li>   
 
         <li>Rainer Simon, Peter Fr&ouml;hlich, Thomas Grechenig. 2008. GeoPointing: Evaluating the Performance of Orientation-Aware
-          Location-Based Interaction Under Real-World Conditions. In <i>Journal of Location Based Services</i>. 2, 1 (March 2008),
-          pp. 24-40.</li>
+          Location-Based Interaction Under Real-World Conditions.<br/>
+          In <i>Journal of Location Based Services</i>. 2, 1 (March 2008), pp. 24-40.</li>
 
-        <li>Rainer Simon, Peter Fr&ouml;hlich, Hermann Anegg. 2007. Enabling Spatially Aware Mobile Applications. In
-          <i>Transactions in GIS</i>. Vol. 11, Issue 5 (October 2007), pp. 738-794.</li>
+        <li>Rainer Simon, Peter Fr&ouml;hlich, Hermann Anegg. 2007. Enabling Spatially Aware Mobile Applications.<br/>
+          In <i>Transactions in GIS</i>. Vol. 11, Issue 5 (October 2007), pp. 738-794.</li>
       </ul>
 
       <h1>CONFERENCE OR WORKSHOP</h1>
       <ul>
-        <li>Peter Fr&ouml;hlich, Gerhard Obernberger, Rainer Simon, Peter Reichl. 2008. Exploring the Design Space of Smart Horizons.
+        <li>Peter Fr&ouml;hlich, Gerhard Obernberger, Rainer Simon, Peter Reichl. 2008. Exploring the Design Space of 
+          Smart Horizons.<br/>
           In <i>Proceedings of the 10th International Conference on Human-Computer Interaction with Mobile Devices and Services
           (Mobile HCI 2008)</a></i>. ACM, New York, NY, USA, pp. 363-366.</li>
 
         <li>Peter Fr&ouml;hlich, Rainer Simon, Elisabeth Muss, Andrea Stepan, Peter Reichl. 2007. Envisioning Future Mobile Spatial
-          Applications. In <i>Proceedings of the 21st British HCI Group Annual Conference on People and Computers</i> (BCS-HCI
-          2007), pp. 35.38.</li>
+          Applications.<br/>
+          In <i>Proceedings of the 21st British HCI Group Annual Conference on People and Computers</i> (BCS-HCI 2007),
+          pp. 35.38.</li>
 
-        <li>Rainer Simon, Peter Fr&ouml;hlich. 2007. A Mobile Application Framework for the Geospatial Web. In <i>Proceedings
-          of the 16th International World Wide Web Conference</i> (WWW 2007). ACM, New York, NY, USA, pp. 381-390.</li>
+        <li>Rainer Simon, Peter Fr&ouml;hlich. 2007. A Mobile Application Framework for the Geospatial Web.<br/> 
+          In <i>Proceedings of the 16th International World Wide Web Conference</i> (WWW 2007). ACM, New York, NY,
+          USA, pp. 381-390.</li>
 
 				<li>
 				P. Fr&ouml;hlich, R. Simon, L. Baillie, J. Roberts, and R. Murray-Smith (2007)
