--- a/publications.html
+++ b/publications.html
@@ -22,66 +22,55 @@
       <h1>JOURNAL</h1>
       <ul>
         <li>Bernhard Haslhofer, Robert Sanderson, Rainer Simon, and Herbert Van de Sompel. 2012. Open Annotations on 
-          Multimedia Web Resources.<br/>
-          In <i>Multimedia Tools and Applications</i> (in press).</li>
+          Multimedia Web Resources. In <i>Multimedia Tools and Applications</i> (in press).</li>
 
         <li>Rainer Simon, Bernhard Haslhofer, Joachim Jung. 2011. Annotations, Tags and Linked Data. Metadata Enrichment in 
-          Online Map Collections Through Volunteer-Contributed Information.<br/>
-          In <i>e-Perimetron</i>. Vol. 6, No.3 (2011), pp. 129-137.</li>   
+          Online Map Collections Through Volunteer-Contributed Information. In <i>e-Perimetron</i>. Vol. 6, No.3 (2011), 
+          pp. 129-137.</li>   
 
         <li>Rainer Simon, Joachim Korb, Christian Sadilek, Matthias Baldauf. 2010. Explorative User Interfaces for
-          Browsing Historical Maps on the Web.<br/>
-          In <i>e-Perimetron</i>. Vol. 5, No.3 (2010), pp. 132-143.</li>   
+          Browsing Historical Maps on the Web. In <i>e-Perimetron</i>. Vol. 5, No.3 (2010), pp. 132-143.</li>   
 
         <li>Rainer Simon, Peter Fr&ouml;hlich, Thomas Grechenig. 2008. GeoPointing: Evaluating the Performance of Orientation-Aware
-          Location-Based Interaction Under Real-World Conditions.<br/>
-          In <i>Journal of Location Based Services</i>. 2, 1 (March 2008), pp. 24-40.</li>
+          Location-Based Interaction Under Real-World Conditions. In <i>Journal of Location Based Services</i>.
+          2, 1 (March 2008), pp. 24-40.</li>
 
-        <li>Rainer Simon, Peter Fr&ouml;hlich, Hermann Anegg. 2007. Enabling Spatially Aware Mobile Applications.<br/>
+        <li>Rainer Simon, Peter Fr&ouml;hlich, Hermann Anegg. 2007. Enabling Spatially Aware Mobile Applications.
           In <i>Transactions in GIS</i>. Vol. 11, Issue 5 (October 2007), pp. 738-794.</li>
+      </ul>
+
+      <h1>BOOK CHAPTER</h1>
+      <ul>
+        <li>Rainer Simon, Harald Kunczier, Hermann Anegg. 2007. Towards Orientation-Aware Location Based Mobile Services.
+          In <i>Location Based Services and TeleCartography</i>. Georg Gartner, William Cartwright, Michael P. Peterson
+          (Eds.). Springer Lecture Notes in Geoinformation and Cartography, pp. 279-290.</li>
       </ul>
 
       <h1>CONFERENCE OR WORKSHOP</h1>
       <ul>
+        <li>Peter Fr&ouml;hlich, Lynne Baillie, Rainer Simon. 2008. FEATURE: Realizing the Vision of Mobile 
+          Spatial Interaction. In <i>ACM Interactions</i>. Vol. 15, Issue 1 (January 2008), pp. 15-18.</li>
+
         <li>Peter Fr&ouml;hlich, Gerhard Obernberger, Rainer Simon, Peter Reichl. 2008. Exploring the Design Space of 
-          Smart Horizons.<br/>
-          In <i>Proceedings of the 10th International Conference on Human-Computer Interaction with Mobile Devices and Services
-          (Mobile HCI 2008)</a></i>. ACM, New York, NY, USA, pp. 363-366.</li>
+          Smart Horizons. In <i>Proceedings of the 10th International Conference on Human-Computer Interaction with 
+          Mobile Devices and Services (Mobile HCI 2008)</a></i>. ACM, New York, NY, USA, pp. 363-366.</li>
 
-        <li>Peter Fr&ouml;hlich, Rainer Simon, Elisabeth Muss, Andrea Stepan, Peter Reichl. 2007. Envisioning Future Mobile Spatial
-          Applications.<br/>
-          In <i>Proceedings of the 21st British HCI Group Annual Conference on People and Computers</i> (BCS-HCI 2007),
-          pp. 35.38.</li>
+        <li>Peter Fr&ouml;hlich, Rainer Simon, Elisabeth Muss, Andrea Stepan, Peter Reichl. 2007. Envisioning Future 
+          Mobile Spatial Applications. In <i>Proceedings of the 21st British HCI Group Annual Conference on People 
+          and Computers</i> (BCS-HCI 2007), pp. 35.38.</li>
 
-        <li>Rainer Simon, Peter Fr&ouml;hlich. 2007. A Mobile Application Framework for the Geospatial Web.<br/> 
-          In <i>Proceedings of the 16th International World Wide Web Conference</i> (WWW 2007). ACM, New York, NY,
-          USA, pp. 381-390.</li>
+        <li>Rainer Simon, Peter Fr&ouml;hlich. 2007. A Mobile Application Framework for the Geospatial Web. In <i>Proceedings
+          of the 16th International World Wide Web Conference</i> (WWW 2007). ACM, New York, NY, USA, pp. 381-390.</li>
 
-				<li>
-				P. Fr&ouml;hlich, R. Simon, L. Baillie, J. Roberts, and R. Murray-Smith (2007)
-				Mobile Spatial Interaction,  <a href="http://www.chi2007.org/">CHI '07</a> Extended Abstracts
-				on Human Factors in Computing Systems, San Jose, California, USA, pp. 2841-2844, ACM Press.
-				</li>
+        <li>Stefan Maierhofer, Rainer Simon, Robert F. Tobler. 2007. Simplified Guided Visibility Sampling for Location 
+          Based Services. In <i>Proceedings of the 12th Int. Conference on Urban, Regional Development and Information
+          Society</i> (CORP2007). Vienna, Austria.</li>
 
-				<li>
-				R. Simon, H. Kunczier, and H. Anegg (2007) Towards Orientation-Aware Location Based Mobile Services,
-				<i>Location Based Services and TeleCartography</i>, G. Gartner, W. Cartwright, and M. P. Peterson 
-				(Eds.), pp. 279-290, Springer Lecture Notes in Geoinformation and Cartography. (<a href="http://p2d.ftw.at/papers/SimonKunczierAnegg.pdf">PDF</a>)
-				</li>
+        <li>Peter Fr&ouml;hlich, Rainer Simon, Christian Kaufmann. 2007. Adding Space to Location in Mobile Emergency Response
+          Technologies. In <i>International Workshop on Mobile Information Technology for Emergency Response</i>
+          (MobileResponse 2007), St. Augustin, Germany. Springer LNCS, pp. 71-76.</li>
 
-				<li>
-				S. Maierhofer, R. Simon, and R. F. Tobler (2007) Simplified Guided Visibility Sampling for Location 
-				Based Services, <i>REAL CORP 2007</i>, Vienna, Austria. (<a href="http://p2d.ftw.at/papers/CORP2007_Visibility.pdf">PDF</a>)
-				</li>
-
-				<li>
-				P. Fr&ouml;hlich, R. Simon, and C. Kaufmann (2007) Adding Space to Location in Mobile Emergency Response
-				Technologies, <i>International Workshop on Mobile Information Technology for Emergency Response 
-				(MobileResponse 2007)</i>, St. Augustin, Germany, pp. 71-76, Springer LNCS. (<a href="http://p2d.ftw.at/papers/44580071.pdf">PDF</a>)
-				</li>
-
-				<li>
-				R. Simon, P. Fr&ouml;hlich, and H. Anegg (2006) Beyond Location Based - The Spatially Aware Mobile Phone,
+        <li>Rainer Simon, Peter Fr&ouml;hlich, Hermann Anegg. 2006. Beyond Location Based - The Spatially Aware Mobile Phone,
 				<i>Proceedings of the <a href="http://www.dl.kuis.kyoto-u.ac.jp/w2gis06/">6th International Symposium on
 				Web and Wireless Geographical Information Systems (W2GIS 2006)</a></i>, Hong Kong, China, vol. 4295/2006,
 				pp. 12-21, Springer LNCS. (<a href="http://www.springerlink.com/content/m2655q1282225716/">PDF</a>)
