--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@
       <ul>
         <li>Rainer Simon, Harald Kunczier, Hermann Anegg. 2007. Towards Orientation-Aware Location Based Mobile Services.
           In <i>Location Based Services and TeleCartography</i>. Georg Gartner, William Cartwright, Michael P. Peterson
-          (Eds.). Springer Lecture Notes in Geoinformation and Cartography, pp. 279-290.</li>
+          (Eds.) Springer Lecture Notes in Geoinformation and Cartography, pp. 279-290.</li>
       </ul>
 
       <h1>CONFERENCE OR WORKSHOP</h1>
