--- a/publications.html
+++ b/publications.html
@@ -74,28 +74,18 @@
           In <i>Proceedings of the 6th International Symposium on Web and Wireless Geographical Information Systems</i>
           (W2GIS 2006). Vol. 4295 (2006), pp. 12-21. Springer LNCS.</li>
 
-	<li>
-				P. Fr&ouml;hlich, R. Simon, L. Baillie, and H. Anegg (2006) Comparing Conceptual 
-				Designs for Mobile Access to Geo-Spatial Information,
-				<i>Proceedings of the <a href="http://mobilehci.soberit.hut.fi/">8th International Conference
-				on Human-Computer Interaction with Mobile Devices and Services (MobileHCI 06)</a></i>, Espoo, Finland, 
-				pp. 109-112, ACM Press. (<a href="http://p2d.ftw.at/papers/p109-froehlich.pdf">PDF</a>)
-				</li>
+	<li>Peter Fr&ouml;hlich, Rainer Simon, Lynne Baillie, Hermann Anegg. 2006. Comparing Conceptual Designs for
+          Mobile Access to Geo-Spatial Information. In <i>Proceedings of the 8th International Conference
+          on Human-Computer Interaction with Mobile Devices and Services</i> (MobileHCI 06). ACM, New York, YN, USA, 
+          pp. 109-112.</li>
 
-				<li>
-				R. Simon (2006) The Creative Histories Mobile Explorer - Implementing a 3D Multimedia
-				Tourist Guide for Mass-Market Mobile Phones,
-				<i>Proceedings of the <a href="http://www.eva-vienna.at/">1st EVA 2006 Vienna Conference</a></i>, Vienna, Austria,
-				pp. 59-66. (<a href="files/Simon_EvaVienna.pdf">PDF</a>)
-				</li>
+        <li>Rainer Simon. 2006. The Creative Histories Mobile Explorer - Implementing a 3D Multimedia Tourist Guide
+          for Mass-Market Mobile Phones. In <i>Proceedings of the EVA Vienna 2006 Conference</i>. August 27-30, 2006.
+          Vienna, Austria, p. 59-66.</li>
 
-				<li>
-				R. Simon, F. Wegscheider, and K. Tolar (2005) Tool-Supported Single Authoring
-				for Device Independence and Multimodality,
-				<i>Proceedings of the <a href="http://mobilehci.icts.sbg.ac.at/">7th International Conference on Human Computer
-				Interaction with Mobile Devices &amp; Services (MobileHCI 2005)</a></i>,
-				Salzburg, Austria, pp 91-98, ACM Press. (<a href="http://mona.ftw.at/papers/f05-simon.pdf">PDF</a>)
-				</li>
+        <li>Rainer Simon, Florian Wegscheider, Konrad Tolar. 2005. Tool-Supported Single Authoring for Device Independence
+          and Multimodality. In <i>Proceedings of the 7th International Conference on Human Computer Interaction with
+          Mobile Devices &amp; Services</i> (MobileHCI 2005). ACM, New York, NY, USA, pp. 91-98.</li>
 
 				<li>
 				L. Baillie, R. Simon, R. Schatz, F. Wegscheider, and H. Anegg (2005)
