--- a/publications.html
+++ b/publications.html
@@ -87,55 +87,29 @@
           and Multimodality. In <i>Proceedings of the 7th International Conference on Human Computer Interaction with
           Mobile Devices &amp; Services</i> (MobileHCI 2005). ACM, New York, NY, USA, pp. 91-98.</li>
 
-				<li>
-				L. Baillie, R. Simon, R. Schatz, F. Wegscheider, and H. Anegg (2005)
-				Gathering Requirements for Multimodal Mobile Applications,
-				<i>Proceedings of the <a href="http://iti.srce.hr/index.html">7th IEEE International
-				Conference on Information Technology Interfaces (ITI 2005)</a></i>,
-				Dubrovnik, Croatia, pp.240-245, IEEE. (<a href="http://mona.ftw.at/papers/ITI_2005_baillie_multimodal.pdf">PDF</a>)
-				</li>
+        <li>Lynne Baillie, Rainer Simon, Raimund Schatz, Florian Wegscheider, Hermann Anegg. 2005. Gathering Requirements
+          for Multimodal Mobile Applications. In <i>Proceedings of the 7th IEEE International Conference on 
+          Information Technology Interfaces</i> (ITI 2005), pp.240-245.</li>
 
-				<li>
-				R. Schatz, R. Simon, H. Anegg, F. Wegscheider, and G. Niklfeld (2005) 
-				Developing Mobile Multimodal Applications,
-				<i><a href="http://www.bcs-hci.org.uk/hci2005/">19th British HCI Group Annual Conference</a></i>, Edinburgh, UK,
-				vol.2, pp. 250-252. (<a href="http://mona.ftw.at/papers/dev_mm_nextgen_apps_05_final.pdf">PDF</a>)
-				</li>
+        <li>Raimund Schatz, Rainer Simon, Hermann Anegg, Florian Wegscheider, Georg Niklfeld. 2005. Developing Mobile
+          Multimodal Applications. In <i>Proceedings of the 19th British HCI Group Annual Conference</i>. Vol.2,
+          pp. 250-252.</li>
 
-				<li>
-				L. Baillie, R. Schatz, R. Simon, H. Anegg, F. Wegscheider, G. Niklfeld, and A. Gassner (2005)
-				Designing Mona: User Interactions with Multimodal Mobile Applications, 
-				Invited paper at the <i>11th International Conference on Human-Computer Interaction (HCI International 2005)</i>,
-				Las Vegas, Nevada, USA. (<a href="http://mona.ftw.at/papers/designingmona_final.pdf">PDF</a>)
-				</li>
+        <li>Georg Niklfeld, Hermann Anegg, Michael Pucher, Raimund Schatz, Rainer Simon, Florian Wegscheider, Alexander 
+          Gassner, Michael Jank, Günther Pospischil. 2005. Device Independent Mobile Multimodal User Interfaces with the
+          MONA Multimodal Presentation Server. In <i>Eurescom Summit 2005</i>. April 27-29, 2005. Heidelberg, Germany.</li>
 
-				<li>
-				G. Niklfeld, H. Anegg, M. Pucher, R. Schatz, R. Simon, F. Wegscheider, A. Gassner, M. Jank, and G. Pospischil (2005)
-				Device Independent Mobile Multimodal User Interfaces with the MONA Multimodal Presentation Server,
-				<i>Eurescom Summit 2005</i>, Heidelberg, Germany. (<a href="http://mona.ftw.at/papers/e2.pdf">PDF</a>)
+        <li>Rainer Simon, Michael Jank, Florian Wegscheider. 2004. A Generic UIML Vocabulary for Device- and Modality Independent
+          User Interfaces. In <i>Proceedings of the 13th International World Wide Web Conference on Alternate Track Papers &amp;
+          Posters</i> (WWW Alt. '04). ACM, New York, NY, USA, pp. 434-435.</li>
 
-				<li>
-				R.Simon, M. Jank, and F. Wegscheider (2004) A Generic UIML Vocabulary for Device- and Modality Independent 
-				User Interfaces,
-				<i>Poster Proceedings of the <a href="http://www2004.org/">13th International World Wide Web Conference</a></i>,
-				New York, USA, pp. 434-435, ACM Press. (<a href="http://mona.ftw.at/papers/2p434.pdf">PDF</a>)
-				<br/>
-				<b>Awarded <a href="http://mona.ftw.at/img/award.jpg">Best Poster</a> of the conference</b><br/>
-				</li>
+        <li>Florian Wegscheider, Thomas Dangl, Michael Jank, Rainer Simon. 2004. A Multimodal Interaction Manager for Device
+          Independent Mobile Applications. In <i>Proceedings of the 13th International World Wide Web Conference on Alternate
+          Track Papers &amp; Posters</i> (WWW Alt. '04). ACM, New York, NY, USA, pp. 272-273.</li>
 
-				<li>
-				F. Wegscheider, T. Dangl, M. Jank, and R. Simon (2004) A Multimodal Interaction Manager for
-				Device Independent Mobile Applications,
-				<i>Poster Proceedings of the <a href="http://www2004.org/">13th International World Wide Web Conference</a></i>,
-				New York, USA, pp. 272-273, ACM Press. (<a href="http://mona.ftw.at/papers/2p272.pdf">PDF</a>)
-				</li>
-
-				<li>
-				H. Anegg, T. Dangl, M. Jank, G. Niklfeld, M. Pucher, R. Schatz, R. Simon, and F. Wegscheider (2004)
-				Multimodal Interfaces in Mobile Devices - The MONA Project,
-				<i><a href="http://www.research.att.com/~rjana/mobea2004.htm">MobEA II - Emerging Applications for Wireless
-				and Mobile Access Workshop</a></i>, New York, USA. (<a href="http://mona.ftw.at/papers/MobEAII-Paper_6.pdf">PDF</a>)
-				</li>	
+        <li>Hermann Anegg, Thomas Dangl, Michael Jank, Georg Niklfeld, Michael Pucher, Raimund Schatz, Rainer Simon, Florian
+          Wegscheider. 2004. Multimodal Interfaces in Mobile Devices - The MONA Project. In <i>MobEA II - Emerging Applications
+          for Wireless and Mobile Access Workshop</i>. May 18, 2004. New York, NY, USA.</li>	
 
         <li>Florian Wegscheider, Rainer Simon, Konrad Tolar. 2004. Position Paper for the W3C Workshop on Metadata for 
           Content Adaptation. In <i>W3C Workshop on Metadata for Content Adaptation</i>. October 12-13, 2004. Dublin,
