--- a/publications.html
+++ b/publications.html
@@ -1,6 +1,6 @@
 <html>
   <head>	
-    <title>Rainer Simon</title>
+    <title>Dr. Rainer Simon - Publications</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
       #menu .fixed a {
@@ -48,6 +48,10 @@
 
       <h1>CONFERENCE OR WORKSHOP</h1>
       <ul>
+        <li>Rainer Simon, Joachim Jung, Bernhard Haslhofer. 2011. The YUMA Media Annotation Framework. In <i>Proceedings
+          of the 15th International Conference on Theory and Practice of Digital Libraries: Research and Advanced Technology
+          for Digital Libraries</i> (TPDL'11). Springer-Verlag, Berlin, Heidelberg, pp. 434-437.</li>
+
         <li>Peter Fr&ouml;hlich, Lynne Baillie, Rainer Simon. 2008. FEATURE: Realizing the Vision of Mobile 
           Spatial Interaction. In <i>ACM Interactions</i>. Vol. 15, Issue 1 (January 2008), pp. 15-18.</li>
 
